--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="user_stats">Matches won: %1$d\nMatches lost: %2$d\nMatches win ratio: %3$s</string>
     <string name="user_rank">General rank: %1$d</string>
     <string name="invalid_time_in_the_past">Please select a time in the future</string>
+    <string name="failed_to_load_users_list">Failed to load users list</string>
 </resources>
