--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="invalid_time_in_the_past">Please select a time in the future</string>
     <string name="failed_to_load_users_list">Failed to load users list</string>
     <string name="no_match_history">No match history</string>
+    <string name="upcoming_matches">Upcoming</string>
+    <string name="past_matches">Past</string>
 </resources>
