--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="login_success">Logged in!</string>
     <string name="login_error">Login error %1$s</string>
     <string name="challenge_user">Challenge user</string>
+    <string name="user_details">User Details</string>
     <string name="challenge">Challenge</string>
+    <string name="close">Close</string>
     <string name="cancel">Cancel</string>
     <string name="user_stats">Matches won: %1$d\nMatches lost: %2$d\nMatches win ratio: %3$s</string>
     <string name="user_rank">General rank: %1$d</string>
