--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="decline">Decline</string>
     <string name="confirmed">Confirmed</string>
     <string name="unconfirmed">Unconfirmed</string>
+    <string name="unconfirmed_matches">Unconfirmed</string>
 </resources>
