--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="confirmed">Confirmed</string>
     <string name="unconfirmed">Unconfirmed</string>
     <string name="unconfirmed_matches">Unconfirmed</string>
+    <string name="not_played">Not played</string>
 </resources>
