fragment transactions fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="edit_request_sent">Edit request sent!</string>
     <string name="edit_request_send_failed">Something went wrong while sending the edit request, please try again.</string>
     <string name="changes_requested">Changes requested</string>
+    <string name="network_error_message">Something went wrong\nPlease try again</string>
 </resources>
