difficuly and success bar fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="decline_reasons">Decline reasons</string>
     <string name="confirm">Confirm</string>
     <string name="edit_declined">Edit declined!</string>
+    <string name="me_capital">Me</string>
+    <string name="success_rate">Success rate</string>
 </resources>
