--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,10 @@
     <string name="events">Events</string>
     <string name="no_championships_yet">Nothing to show here…</string>
     <string name="championship_details">Championship Details</string>
+    <string name="started_on_x">Started on %1$s</string>
+    <string name="starts_on_x">Starts on %1$s</string>
+    <string name="created_by_x">Created by %1$s</string>
+    <string name="championship_x">Championship: %1$s</string>
 
     <plurals name="x_members">
         <item quantity="one">%d member</item>
