--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="edit">Edit</string>
     <string name="edit_request_sent">Edit request sent!</string>
     <string name="edit_decline_failed">Something went wrong while declining the edit request, please try again.</string>
-    <string name="edit_request_send_failed">Something went wrong while sending the edit request, please try again.</string>
+    <string name="edit_request_send_failed">Something went wrong while editing the match, please try again.</string>
     <string name="changes_requested_by_x">Changes requested by %1$s</string>
     <string name="network_error_message">Something went wrong\nPlease try again</string>
     <string name="edit_accepted">Edit accepted!</string>
@@ -110,6 +110,7 @@
     <string name="match_created_successfully">Match created successfully!</string>
     <string name="invalid_score">Invalid score</string>
     <string name="please_wait">Please wait…</string>
+    <string name="match_edited">Match edited!</string>
 
     <plurals name="x_members">
         <item quantity="one">%d member</item>
